@@ -63,6 +63,7 @@ allprojects {
                 "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
                 "--add-opens", "java.base/java.util.concurrent.locks=ALL-UNNAMED",
                 "--add-opens", "java.base/java.text=ALL-UNNAMED",
+                "--add-opens", "java.base/java.time=ALL-UNNAMED",
                 "--add-opens", "java.base/java.io=ALL-UNNAMED",
                 "--add-opens", "java.base/java.nio=ALL-UNNAMED",
                 "--add-opens", "java.base/java.nio.file=ALL-UNNAMED",
